[package]
name = "wasm-waveshaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
pollster = "0.2" # block on async functions
bytemuck = { version = "1.12", features = [ "derive" ] }
futures-intrusive = "0.5.0"
# citegraph dependencies
scraper = { version = "0.14.0" }
regex = { version = "1.7.1" }

console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.17.0" , features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}
tinyaudio = "0.1.2"

[lib]
crate-type = ["cdylib", "rlib"]
